# testing

./: .config.ENV.example  .dockerignore  .env  .env.example  .gitignore  .gitmodules  README.md  bastions.sh  docker-compose-data.dev.yml  docker-compose-data.prod.yml  docker-compose-data.uat.yml  docker-compose-data.yml  docker-compose-monolith.dev.yml  docker-compose-monolith.prod.yml  docker-compose-monolith.uat.yml  docker-compose-monolith.yml  docker-compose-proxy.dev.yml  docker-compose-proxy.prod.yml  docker-compose-proxy.uat.yml  docker-compose-proxy.yml  index.html  package-lock.json  package.json  release-deploy.sh  release-manifest.yaml  setupLocalDev.sh  tag.sh  terraform.tfstate  vite.config.ts  yaak.json
api/: .config  .config.dev  .config.local  .config.prod  .config.uat  .env.example  .gitignore  .secrets  .secrets.ENV.example  Dockerfile  README.md  TAGS  VERSIONS  config.yaml  genInterfaces.sh  genProto.sh  go.mod  go.sum  loadEnv.sh  schema.sql  verifier.go
clob/: .config  .config.dev  .config.local  .gitignore  Cargo.toml  Dockerfile  README.md  TAGS  VERSIONS  build.rs  config.toml
clob/proto/: api.proto  clob.proto  validate
clob/simulator/: .gitignore  README.md  eslint.config.mts  eslint.config.ts  index.ts  package-lock.json  package.json  simulator.ts  tsconfig.json
clob/src/: constants.rs  grpc_service.rs  lib.rs  main.rs  nats.rs  nats_listener.rs  orderbook.rs  recreate_orderbook.rs  types.rs  utils.rs
db/: .config  .config.dev  .config.local  .secrets  .secrets.ENV.example  Dockerfile  README.md  VERSIONS
docs/: CLOB_SMART_CONTRACT_INTEGRATION.md  HCS_Topic_Creation_Solution.md
eventbus/: .config  .config.dev  .config.prod  .secrets  .secrets.ENV.example  Dockerfile  README.md  VERSION
infra/: .gitignore  README.md  data.tf  dev.tf  genEnvs.sh  main.tftpl  terraform.tfstate  terraform.tfstate.backup  (+1 more)
(+789 files in other folders)
