[package]
name = "clob"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.45.0"
chrono = "0.4.42"
futures-util = "0.3.31"
log = "0.4.28"
once_cell = "1.21.3"
prost = "0.14.0"
prost-types = "0.14.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = "0.14.2"
# tonic-reflection = "0.8"
tonic-build = "0.14.2"
tonic-prost = "0.14.2"
uuid = "1.3"

[build-dependencies]
tonic-prost-build = "0.14.2"

[dependencies.simple_logger]
version = "5.1.0"
default-features = false
features = ["timestamps","colors"]
